--- a/nginx-demo/manifest.yaml
+++ b/nginx-demo/manifest.yaml
@@ -11,4 +11,18 @@ spec:
       ports:
         - containerPort: 80
 ---
-
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app.kubernetes.io/instance: nginx-demo
+  name: nginx
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app.kubernetes.io/instance: nginx-demo
+  type: ClusterIP
+---
