--- a/nginx-demo/manifest.yaml
+++ b/nginx-demo/manifest.yaml
@@ -26,3 +26,20 @@ spec:
     app.kubernetes.io/instance: nginx-demo
   type: ClusterIP
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: grafana
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: nginx
+            port:
+              name: web
+    host: nginx-demo.homelab.com
+---
