remove keycloak app

--- a/apps/keycloak.yaml
+++ b/apps/keycloak.yaml
@@ -1,26 +1,26 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: keycloak
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    name: ''
-    namespace: keycloak
-    server: 'https://kubernetes.default.svc'
-  source:
-    path: keycloak
-    repoURL: 'https://github.com/kszpakowski/homelab-apps.git'
-    targetRevision: HEAD
-    directory:
-      recurse: true
-  sources: []
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: keycloak
+#   namespace: argocd
+#   finalizers:
+#     - resources-finalizer.argocd.argoproj.io
+# spec:
+#   destination:
+#     name: ''
+#     namespace: keycloak
+#     server: 'https://kubernetes.default.svc'
+#   source:
+#     path: keycloak
+#     repoURL: 'https://github.com/kszpakowski/homelab-apps.git'
+#     targetRevision: HEAD
+#     directory:
+#       recurse: true
+#   sources: []
+#   project: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
+#     syncOptions:
+#       - CreateNamespace=true
