--- a/argocd/argo-cm.yaml
+++ b/argocd/argo-cm.yaml
@@ -3,6 +3,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-cm
+  labels:
+    app.kubernetes.io/instance: argocd
+    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/part-of: argocd
 data:
   url: https://argocd.homelab.com
   dex.config: |
