--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- argo-cm.yaml
-- argocd-cmd-params-cm.yaml
 - ingress.yaml
 - base
+patchesStrategicMerge:
+- argocd-cm.yaml
+- argocd-cmd-params-cm.yaml
