update dex config

--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -10,20 +10,20 @@ data:
   url: https://argocd.homelab.com
   dex.config: |
     connectors:
-      # - type: oidc
-      #   id: keycloak
-      #   name: Keycloak
-      #   config:
-      #     issuer: http://keycloak.keycloak/realms/kubernetes/
-      #     clientID: kubernetes
-
-      #     # Dex's issuer URL + "/callback"
-      #     redirectURI: http://argocd-dex-server:5556/callback
-      - type: github
-        id: github
-        name: GitHub
+      - type: oidc
+        id: keycloak
+        name: Keycloak
         config:
-          clientID: e2ae5b8b705e0c0f16c7
-          clientSecret: test
-          orgs:
-          - name: k13i
+          issuer: http://keycloak.homelab.com/realms/kubernetes/
+          clientID: kubernetes
+
+          # Dex's issuer URL + "/callback"
+          redirectURI: http://argocd-dex-server:5556/callback
+      # - type: github
+      #   id: github
+      #   name: GitHub
+      #   config:
+      #     clientID: e2ae5b8b705e0c0f16c7
+      #     clientSecret: test
+      #     orgs:
+      #     - name: k13i
