add argocd rbac cm

--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -16,3 +16,4 @@ data:
         config:
           issuer: http://keycloak.homelab.com/realms/kubernetes
           clientID: argocd
+        requestedScopes: ["openid", "profile", "email", "groups"]
