--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -6,5 +6,6 @@ resources:
 patchesStrategicMerge:
 - argocd-cm.yaml
 - argocd-cmd-params-cm.yaml
+- argocd-rbac-cm.yaml
 - argocd-server.yaml
 - dex.yaml
