--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -9,9 +9,12 @@ metadata:
     app.kubernetes.io/part-of: argocd
 data:
   url: https://argocd.homelab.com
-  oidc.config: |
-    id: keycloak
-    name: Keycloak
-    issuer: http://keycloak.homelab.com/realms/kubernetes
-    clientID: argocd
-    requestedScopes: ["openid", "profile", "email", "groups"]
+  dex.config: |
+    connectors:
+      - type: oidc
+        id: keycloak
+        name: Keycloak
+        config:
+          issuer: http://keycloak.homelab.com/realms/kubernetes
+          clientID: argocd
+          requestedScopes: ["openid", "profile", "email", "groups"]
