testing oidc groups

--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -17,3 +17,5 @@ data:
         config:
           issuer: http://keycloak.homelab.com/realms/kubernetes
           clientID: argocd
+          groups:
+          - ArgoCDAdmins
