--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -7,5 +7,6 @@ patchesStrategicMerge:
 - argocd-cm.yaml
 - argocd-cmd-params-cm.yaml
 - argocd-rbac-cm.yaml
+- argocd-repo-server.yaml
 - argocd-server.yaml
 - dex.yaml
