testing oidc groups

--- a/argocd/argocd-rbac-cm.yaml
+++ b/argocd/argocd-rbac-cm.yaml
@@ -5,7 +5,7 @@ metadata:
   name: argocd-rbac-cm
 data:
   # policy.default: role:readonly
-  scopes: '[email, groups]'
+  # scopes: '[email, groups]'
   policy.csv: |
     g, ArgoCDAdmins, role:admin
   
