--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -9,11 +9,17 @@ metadata:
     app.kubernetes.io/part-of: argocd
 data:
   url: https://argocd.homelab.com
-  dex.config: |
-    connectors:
-      - type: oidc
-        id: keycloak
-        name: Keycloak
-        config:
-          issuer: http://keycloak.homelab.com/realms/kubernetes
-          clientID: argocd
+  oidc.config: |
+    name: Keycloak
+    issuer: http://keycloak.homelab.com/realms/kubernetes
+    clientID: argocd
+    # clientSecret: $oidc.keycloak.clientSecret
+    requestedScopes: ["openid", "profile", "email", "groups"]
+  # dex.config: |
+  #   connectors:
+  #     - type: oidc
+  #       id: keycloak
+  #       name: Keycloak
+  #       config:
+  #         issuer: http://keycloak.homelab.com/realms/kubernetes
+  #         clientID: argocd
