--- a/argocd/common-deployment-patch.yaml
+++ b/argocd/common-deployment-patch.yaml
@@ -10,4 +10,5 @@ spec:
         - ip: "192.168.1.121"
           hostnames:
           - "keycloak.homelab.com"
+          - "argocd.homelab.com"
           
