testing oidc groups

--- a/apps/nginx-demo.yaml
+++ b/apps/nginx-demo.yaml
@@ -15,7 +15,7 @@ spec:
     repoURL: 'https://github.com/kszpakowski/homelab-apps.git'
     targetRevision: HEAD
   sources: []
-  project: default
+  project: digital-channels-project
   syncPolicy:
     automated:
       prune: true
