--- a/apps/digital-channels-project.yaml
+++ b/apps/digital-channels-project.yaml
@@ -4,6 +4,11 @@ metadata:
   name: digital-channels-project
   namespace: argocd
 spec:
+  sourceRepos:
+  - '*'
+  destinations:
+  - namespace: 'nginx-demo'
+    server: '*'
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
