add project destination

--- a/apps/digital-channels-project.yaml
+++ b/apps/digital-channels-project.yaml
@@ -9,6 +9,8 @@ spec:
   destinations:
   - namespace: 'nginx-demo'
     server: '*'
+  - namespace: 'crm-*'
+    server: '*'
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
