change cluster resource whitelist entry

--- a/apps/digital-channels-project.yaml
+++ b/apps/digital-channels-project.yaml
@@ -11,7 +11,7 @@ spec:
     server: '*'
   clusterResourceWhitelist:
   - group: '*'
-    kind: 'namespace'
+    kind: 'Namespace'
   roles:
   # A role which provides read-only access to all applications in the project
   - name: read-only
