--- a/ingress-tls-demo/ingress.yaml
+++ b/ingress-tls-demo/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-tls-demo
@@ -15,6 +15,7 @@ spec:
     http:
       paths:
         - path: /
+          pathType: Prefix
           backend:
             serviceName: ingress-tls-demo-service
             servicePort: 80
