--- a/ingress-tls-demo/ingress.yaml
+++ b/ingress-tls-demo/ingress.yaml
@@ -17,5 +17,7 @@ spec:
         - path: /
           pathType: Prefix
           backend:
-            serviceName: ingress-tls-demo-service
-            servicePort: 80
+            service:
+              name: ingress-tls-demo-service
+              port:
+                number: 8080
