--- a/kube-prometheus/kustomization.yaml
+++ b/kube-prometheus/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- manifests
+- base
 - grafana-ingress.yaml
 patchesStrategicMerge:
 - replicas-count.yaml
