downgrade kube prometheus

--- a/kube-prometheus/kustomization.yaml
+++ b/kube-prometheus/kustomization.yaml
@@ -4,5 +4,8 @@ resources:
 - base
 - ingress.yaml
 patchesStrategicMerge:
-- common-deployment-patch.yaml
 - replicas-count.yaml
+patches:
+- path: common-deployment-patch.yaml
+  target:
+    kind: Deployment
