--- a/kube-prometheus/replicas-count.yaml
+++ b/kube-prometheus/replicas-count.yaml
@@ -5,3 +5,11 @@ metadata:
   namespace: monitoring
 spec:
   replicas: 1
+---
+apiVersion: monitoring.coreos.com/v1
+kind: Alertmanager
+metadata:
+  name: main
+  namespace: monitoring
+spec:
+  replicas: 1
