--- a/kube-prometheus/replicas-count.yaml
+++ b/kube-prometheus/replicas-count.yaml
@@ -13,3 +13,10 @@ metadata:
   namespace: monitoring
 spec:
   replicas: 1
+---
+kind: Deployment
+metadata:
+  name: prometheus-adapter
+  namespace: monitoring
+spec:
+  replicas: 1
