--- a/kube-prometheus/kube-proxy-service.yaml
+++ b/kube-prometheus/kube-proxy-service.yaml
@@ -13,7 +13,7 @@ spec:
       port: 10249
       protocol: TCP
       targetPort: 10249
-  selector:
-    k8s-app: kube-proxy
+  # selector:
+  #   k8s-app: kube-proxy
   type: ClusterIP
   
