--- a/kube-prometheus/kube-proxy-endpoints.yaml
+++ b/kube-prometheus/kube-proxy-endpoints.yaml
@@ -1,15 +1,20 @@
-apiVersion: v1
-kind: Endpoints
+addressType: IPv4
+apiVersion: discovery.k8s.io/v1
+endpoints:
+- addresses:
+  - 192.168.1.121
+kind: EndpointSlice
 metadata:
   name: monitoring-kube-proxy
   labels:
     app: monitoring-kube-proxy
-    k8s-app: kube-proxy
+    app.kubernetes.io/instance: kube-prometheus
+    endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
+    jobLabel: kube-proxy
+    kubernetes.io/service-name: monitoring-kube-proxy
+    service.kubernetes.io/headless: ''
   namespace: kube-system
-subsets:
-  - addresses:
-      - ip: 192.168.1.121
-    ports:
-      - name: http-metrics
-        port: 10249
-        protocol: TCP
+ports: 
+- name: http-metrics
+  port: 10249
+  protocol: TCP
