--- a/kube-prometheus/kube-scheduler-endpoint.yaml
+++ b/kube-prometheus/kube-scheduler-endpoint.yaml
@@ -1,17 +1,21 @@
-apiVersion: v1
-kind: Endpoints
+addressType: IPv4
+apiVersion: discovery.k8s.io/v1
+endpoints:
+  - addresses:
+      - 192.168.1.121
+kind: EndpointSlice
 metadata:
-  name: monitoring-kube-scheduler
+  creationTimestamp: '2023-08-07T00:09:52Z'
+  generateName: monitoring-kube-scheduler-
   labels:
     app: monitoring-kube-scheduler
+    app.kubernetes.io/instance: kube-prometheus
+    endpointslice.kubernetes.io/managed-by: endpointslicemirroring-controller.k8s.io
     k8s-app: kube-scheduler
+    kubernetes.io/service-name: monitoring-kube-scheduler
+  name: monitoring-kube-scheduler-7smlf
   namespace: kube-system
-subsets:
-  - addresses:
-      - ip: 192.168.1.121
-    ports:
-      - name: http-metrics
-        # {{- $kubeSchedulerDefaultInsecurePort := 10251 }}
-        # {{- $kubeSchedulerDefaultSecurePort := 10259 }}
-        port: 10251
-        protocol: TCP
+ports:
+  - name: http-metrics
+    port: 10251
+    protocol: TCP
