--- a/kube-prometheus/kube-proxy-endpoints.yaml
+++ b/kube-prometheus/kube-proxy-endpoints.yaml
@@ -3,6 +3,7 @@ apiVersion: discovery.k8s.io/v1
 endpoints:
 - addresses:
   - 192.168.1.121
+  conditions: {}
 kind: EndpointSlice
 metadata:
   name: monitoring-kube-proxy
