--- a/kube-prometheus/kube-scheduler-endpoint.yaml
+++ b/kube-prometheus/kube-scheduler-endpoint.yaml
@@ -8,12 +8,12 @@ kind: EndpointSlice
 metadata:
   creationTimestamp: '2023-08-07T00:09:52Z'
   labels:
-    app: monitoring-kube-scheduler
+    app: kube-scheduler
     app.kubernetes.io/instance: kube-prometheus
     endpointslice.kubernetes.io/managed-by: endpointslicemirroring-controller.k8s.io
     k8s-app: kube-scheduler
-    kubernetes.io/service-name: monitoring-kube-scheduler
-  name: monitoring-kube-scheduler
+    kubernetes.io/service-name: kube-scheduler
+  name: kube-scheduler
   namespace: kube-system
 ports:
   - name: http-metrics
