--- a/kube-prometheus/kube-proxy-service.yaml
+++ b/kube-prometheus/kube-proxy-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: monitoring-kube-proxy
+  name: kube-proxy
   labels:
-    app: monitoring-kube-proxy
+    app: kube-proxy
     jobLabel: kube-proxy
   namespace: kube-system
 spec:
