--- a/kube-prometheus/kube-scheduler-service.yaml
+++ b/kube-prometheus/kube-scheduler-service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: monitoring-kube-scheduler
+  name: kube-scheduler
   labels:
-    app: monitoring-kube-scheduler
+    app: kube-scheduler
     jobLabel: kube-scheduler
   namespace: kube-system
 spec:
@@ -16,4 +16,3 @@ spec:
       protocol: TCP
       targetPort: 10251 #{{ include "kube-prometheus-stack.kubeScheduler.insecureScrape" (list . $kubeSchedulerDefaultInsecurePort $kubeSchedulerDefaultSecurePort .Values.kubeScheduler.service.targetPort)  }}
   type: ClusterIP
-  
