--- a/traefik/traefik-helm-chart-config.yaml
+++ b/traefik/traefik-helm-chart-config.yaml
@@ -7,7 +7,7 @@ spec:
   valuesContent: |-
     image:
       name: traefik
-      tag: v2.7.1
+      # tag: v2.7.1
     # ports:
     #   amqp1: 
     #     port: 5672
