--- a/rabbitmq-topology-operator/kustomization.yaml
+++ b/rabbitmq-topology-operator/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - https://github.com/rabbitmq/messaging-topology-operator/releases/latest/download/messaging-topology-operator-with-certmanager.yaml
+patchesStrategicMerge:
+  - delete-ns.yaml
