--- a/keycloak-operator/kustomization.yaml
+++ b/keycloak-operator/kustomization.yaml
@@ -4,3 +4,7 @@ resources:
 - https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/22.0.0/kubernetes/keycloaks.k8s.keycloak.org-v1.yml
 - https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/22.0.0/kubernetes/keycloakrealmimports.k8s.keycloak.org-v1.yml
 - https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/22.0.0/kubernetes/kubernetes.yml
+images:
+- name: quay.io/keycloak/keycloak-operator
+  newName: kszpakowski/keycloak-operator
+  newTag: latest
