--- a/keycloak-operator/kustomization.yaml
+++ b/keycloak-operator/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/22.0.0/kubernetes/keycloakrealmimports.k8s.keycloak.org-v1.yml
 - https://raw.githubusercontent.com/keycloak/keycloak-k8s-resources/22.0.0/kubernetes/kubernetes.yml
 - keycloak-db-secret.yaml
+- keycloak.yaml
 images:
 - name: quay.io/keycloak/keycloak-operator
   newName: kszpakowski/keycloak-operator
