--- a/keycloak-operator/kustomization.yaml
+++ b/keycloak-operator/kustomization.yaml
@@ -7,6 +7,9 @@ resources:
 - keycloak-db-secret.yaml
 - keycloak.yaml
 - keycloak-tls-cert.yaml
+- postgres/deployment.yaml
+- postgres/pvc.yaml
+- postgres/service.yaml
 images:
 - name: quay.io/keycloak/keycloak-operator
   newName: kszpakowski/keycloak-operator
