--- a/argocd/argocd-cm.yaml
+++ b/argocd/argocd-cm.yaml
@@ -12,6 +12,6 @@ data:
   admin.enabled: "false"
   oidc.config: |
     name: Keycloak
-    issuer: http://keycloak2.homelab.com/realms/kubernetes
+    issuer: https://keycloak2.homelab.com/realms/kubernetes
     clientID: argocd
     requestedScopes: ["openid", "profile", "email", "groups"]
