switch argo to keycloak with operator

--- a/argocd/common-deployment-patch.yaml
+++ b/argocd/common-deployment-patch.yaml
@@ -10,5 +10,6 @@ spec:
         - ip: "192.168.1.121"
           hostnames:
           - "keycloak.homelab.com"
+          - "keycloak2.homelab.com"
           - "argocd.homelab.com"
           
