--- a/keycloak/ingress.yaml
+++ b/keycloak/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: keycloak
+  annotations:
+    cert-manager.io/issuer: "ca-issuer"
 spec:
   rules:
   - http:
