--- a/cert-manager/letsencrypt-acme-issuer.yaml
+++ b/cert-manager/letsencrypt-acme-issuer.yaml
@@ -2,6 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: letsencrypt
+  namespace: "cert-manager"
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
