--- a/cert-manager/ovh-webhook-rbac.yaml
+++ b/cert-manager/ovh-webhook-rbac.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: cert-manager-webhook-ovh:secret-reader
+  namespace: "cert-manager"
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
@@ -12,6 +13,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: cert-manager-webhook-ovh:secret-reader
+  namespace: "cert-manager"
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
