--- a/crm/manifest.yaml
+++ b/crm/manifest.yaml
@@ -3,9 +3,26 @@ kind: Pod
 metadata:
   name: crm
 spec:
+  labels:
+    app: crm
   containers:
     - name: nginx
       image: nginx:stable-alpine
       imagePullPolicy: IfNotPresent
       ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: crm
+  labels:
+    app: crm
+spec:
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 80
+    targetPort: 80
+  selector:
+    app: crm
