--- a/crm/manifest.yaml
+++ b/crm/manifest.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: crm
-spec:
   labels:
-    app: crm
+    app: keycloak
+spec:
   containers:
     - name: nginx
       image: nginx:stable-alpine
