--- a/crm/manifest.yaml
+++ b/crm/manifest.yaml
@@ -21,8 +21,31 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  - name: http
-    port: 80
-    targetPort: 80
+    - name: http
+      port: 80
+      targetPort: 80
   selector:
     app: crm
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: crm
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt
+spec:
+  rules:
+    - host: crm.homelab.kszpakowski.com
+      http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: crm
+                port:
+                  number: 80
+  tls:
+    - hosts:
+        - crm.homelab.kszpakowski.com
+      secretName: crm-cert
