--- a/crm/manifest.yaml
+++ b/crm/manifest.yaml
@@ -27,25 +27,54 @@ spec:
   selector:
     app: crm
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: crm-tls
+spec:
+  dnsNames:
+    - crm.homelab.kszpakowski.com
+  secretName: crm-cert
+  issuerRef:
+    name: letsencrypt
+    kind: ClusterIssuer
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
 metadata:
   name: crm
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
 spec:
-  rules:
-    - host: crm.homelab.kszpakowski.com
-      http:
-        paths:
-          - pathType: Prefix
-            path: /
-            backend:
-              service:
-                name: crm
-                port:
-                  number: 80
+  entryPoints:
+    - web
+    - websecure
+  routes:
+    - match: Host(`crm.homelab.kszpakowski.com`)
+      kind: Rule
+      services:
+        - name: crm
+          port: 80
   tls:
-    - hosts:
-        - crm.homelab.kszpakowski.com
-      secretName: crm-cert
+    secretName: crm-tls
+---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: crm
+#   annotations:
+#     cert-manager.io/cluster-issuer: letsencrypt
+# spec:
+#   rules:
+#     - host: crm.homelab.kszpakowski.com
+#       http:
+#         paths:
+#           - pathType: Prefix
+#             path: /
+#             backend:
+#               service:
+#                 name: crm
+#                 port:
+#                   number: 80
+#   tls:
+#     - hosts:
+#         - crm.homelab.kszpakowski.com
+#       secretName: crm-cert
